Homepage content added except instructors

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -2,6 +2,9 @@
 h1{
   color: #00378a;
 }
+.pm-button:hover{
+  color: black;
+}
 /*---------------------navbar---------------------*/
 nav{
     background-color:black;
