--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -34,28 +34,37 @@
 <div class="container-fluid section1">
 <div class="container mt-3">
     <div style="text-align: center;">
-        <h1 style="margin-bottom: 2%;">Our Offerings</h1>
+        <h1 style="margin-bottom: 2%; color:black">Our Offerings</h1>
     </div>
 <div class="card-deck">
     <div class="card">
       <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Programming Tutorial</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <div style="text-align: center;">
+          <h5 class="card-title">Programming Tutorial</h5>
+        </div>
+        <p class="card-text" style="font-family: cursive;">Get Started with Coding with our free tutorials in <b>ODIA</b> for a better grasp on the concepts and thereby Better Understanding. </p>
+        <div style="text-align: center;"><a href="{% url 'explore' %}"><p style="font-family: cursive;">Tutorials</p></a></div>
       </div>
     </div>
     <div class="card">
       <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Technical Resources</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <div style="text-align: center;">
+          <h5 class="card-title">Technical Resources</h5>
+        </div>
+        <p class="card-text" style="font-family: cursive;">Along with the tutorials, we are providing you with Notes and Resources all at a single place. You can refer them and practice the questions.</p>
+        <div style="text-align: center;"><a href="{% url 'resources' %}"><p style="font-family: cursive;">Notes and Resources</p></a></div>
       </div>
     </div>
     <div class="card">
       <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">24 X 7 Assistance</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <div style="text-align: center;">
+          <h5 class="card-title">24 X 7 Assitance</h5>
+        </div>
+        <p class="card-text" style="font-family: cursive;">May it be doubts, counselling, or any career related queries, "We Are Here For You All The Time to Help You Out on Your Journey".</p>
+        <div style="text-align: center;"><a href="{% url 'contact' %}"><p style="font-family: cursive;">Contact Us</p></a></div>
       </div>
     </div>
   </div>
@@ -64,7 +73,7 @@
     <a href="{% url 'explore' %}" ><div class="btn btn-primary">View More Courses</div></a>
 </div>
 </div>
-<div class="container-fluid section2 mt-5 mb-5">
+<div class="container section2 mt-5 mb-5">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 icon-class" style="text-align: center;">
             <svg width="8em" height="8em" viewBox="0 0 16 16" class="bi bi-laptop icons1" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -91,7 +100,7 @@
 <div class="container-fluid section3 mt-5 mb-5 pc-card">
     <div class="container mt-3">
     <div style="text-align: center;">
-        <h1 style="margin-bottom: 2%;">Our Instructors</h1>
+        <h1 style="margin-bottom: 2%; color:black">Our Instructors</h1>
     </div>
     <div class="row">
         <div class="col-md-4">
@@ -211,13 +220,15 @@
 </div>
 
     </div>
-    <div class="container-fluid section2 mt-5 mb-5">
+    <div class="container section2 mt-5 mb-5">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
+            <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: justify;">
+              <div style="text-align: center;">
                 <h3>More About Us</h3>
                 <h1>Want to Know More?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
-                <div class="container mt-4" style="text-align: center;">
+              </div>
+                <p style="font-family: cursive; font-size:large">We are a small group of 12-15 members working to give a kick-start to the career of the young generations by teaching them to code in their own native language i.e. <b>ODIA</b>. When we were at your age, we too faced the same difficulty and thus we dont want the future generation to suffer like we did. </p>
+                <div class="container mt-3" style="text-align: center;">
                   <a href="{% url 'about' %}"><div class="btn btn-primary">More About Us</div></a>
                 </div>
             </div>
@@ -240,12 +251,8 @@
                             <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle img-fluid"
                             alt="First sample avatar image">
                         </div>
-                        <p>
-                            <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
-                            eos
-                            id officiis hic tenetur quae quaerat ad velit ab. Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Dolore cum accusamus eveniet molestias voluptatum inventore laboriosam labore
-                            sit, aspernatur praesentium iste impedit quidem dolor veniam.
+                        <p style="font-family: cursive;">
+                            <i class="fas fa-quote-left"></i>Taking a big step from 10+2 to persue higher studies and stepping into Engineering, I faced many problems while learning to code. At Pathapadha.in, We believe if good tutorials and elaborate resources are provided at a single place, Anyone can learn to code with ease.<b>"ଜୟ ଜଗନ୍ନାଥ"(Jay Jagannath)</b> <i class="fas fa-quote-right"></i>
                         </p>
                         <h4 class="font-weight-bold">Anna Deynah</h4>
                         <h6 class="font-weight-bold my-3">Founder at ET Company</h6>
@@ -262,12 +269,8 @@
                             <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" class="rounded-circle img-fluid"
                             alt="Second sample avatar image">
                         </div>
-                        <p>
-                            <i class="fas fa-quote-left"></i> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-                            odit
-                            aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
-                            porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
-                            non numquam eius modi tempora incidunt ut labore. </p>
+                        <p style="font-family: cursive;">
+                            <i class="fas fa-quote-left"></i>I had to go through so many courses and resources; with a messed up schedule. I believe with a good schedule and cleaner plan would have helped me even more. So, from my knowledge, We have gathered all the content you need to get started with your journey to code.  <i class="fas fa-quote-right"></i></p>
                         <h4 class="font-weight-bold">Maria Kate</h4>
                         <h6 class="font-weight-bold my-3">Photographer at Studio LA</h6>
                         <i class="fas fa-star blue-text"> </i>
@@ -283,11 +286,8 @@
                             <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle img-fluid"
                             alt="Third sample avatar image">
                         </div>
-                        <p>
-                            <i class="fas fa-quote-left"></i> Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus
-                            error sit voluptatem accusantium doloremque laudantium.</p>
+                        <p style="font-family: cursive;">
+                            <i class="fas fa-quote-left"></i>You will never know where your path will lead you to but you can definitely choose that path. I believe once you start showing dedication and do hardwork you can achieve anything in your life.<i class="fas fa-quote-right"></i></p>
                         <h4 class="font-weight-bold">John Doe</h4>
                         <h6 class="font-weight-bold my-3">Front-end Developer in NY</h6>
                         <i class="fas fa-star blue-text"> </i>
@@ -297,6 +297,40 @@
                         <i class="far fa-star blue-text"> </i>
                         </div>
                     </div>
+                    <div class="carousel-item">
+                      <div class="testimonial">
+                      <div class="avatar mx-auto mb-4">
+                          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle img-fluid"
+                          alt="Third sample avatar image">
+                      </div>
+                      <p style="font-family: cursive;">
+                        <i class="fas fa-quote-left"></i>Never Give Up! Be consistent and keep practicing. Consistency in the right path is the key to success. We are there to help in making you consistent in your career path.<i class="fas fa-quote-right"></i></p>
+                      <h4 class="font-weight-bold">John Doe</h4>
+                      <h6 class="font-weight-bold my-3">Front-end Developer in NY</h6>
+                      <i class="fas fa-star blue-text"> </i>
+                      <i class="fas fa-star blue-text"> </i>
+                      <i class="fas fa-star blue-text"> </i>
+                      <i class="fas fa-star blue-text"> </i>
+                      <i class="far fa-star blue-text"> </i>
+                      </div>
+                   </div>
+                  <div class="carousel-item">
+                    <div class="testimonial">
+                    <div class="avatar mx-auto mb-4">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle img-fluid"
+                        alt="Third sample avatar image">
+                    </div>
+                    <p style="font-family: cursive;">
+                      <i class="fas fa-quote-left"></i>There are many students who come out of their schooling life from Odia Schools and thus it gets difficult for them to understand the concepts of programming. Keeping this in mind, Our team has come forward to help you all.<i class="fas fa-quote-right"></i></p>
+                    <h4 class="font-weight-bold">John Doe</h4>
+                    <h6 class="font-weight-bold my-3">Front-end Developer in NY</h6>
+                    <i class="fas fa-star blue-text"> </i>
+                    <i class="fas fa-star blue-text"> </i>
+                    <i class="fas fa-star blue-text"> </i>
+                    <i class="fas fa-star blue-text"> </i>
+                    <i class="far fa-star blue-text"> </i>
+                    </div>
+                  </div>
                     </div>
                     <a class="carousel-control-prev left carousel-control" href="#carousel-example-1" role="button"
                     data-slide="prev">
@@ -315,16 +349,16 @@
             </section>
         </div>
         </div>
-        <div class="container-fluid section2 mt-5 mb-5 mobile-article1">
+        <div class="container section2 mt-5 mb-5 mobile-article1">
             <div style="text-align: center;">
                 <h2>Our Top Resources</h2>
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Python Tutorials</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
+                    <p style="font-family: cursive; font-size:large">We have brought you Tutorials on the most popular programming language of the world which is widely used i.e. <b>PYTHON</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
                     <div class="container mt-4" style="text-align: center;">
-                        <a href="{% url 'explore' %}"><div class="btn btn-primary">Read More</div></a> 
+                        <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a> 
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 home-image" style="text-align: center;">
@@ -337,18 +371,18 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>C++ Tutorials</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
+                    <p style="font-family: cursive; font-size:large">We have brought you Tutorials on one of the top most language which is used in almost every company i.e. <b>C++</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
                     <div class="container mt-4" style="text-align: center;">
-                      <a href="{% url 'explore' %}"><div class="btn btn-primary">Read More</div></a>
+                      <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a>
                     </div>
                 </div>
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Notes and Books</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
+                    <p style="font-family: cursive; font-size:large">Have you ever encountered tutorials, Notes and Resources at the same place? We have made all the facilities available for you entirely free of cost. You can enjoy the Tutorials as well as the resources collected from all over the Internet at one place. Have a good time accessing the resources and Learning from us.</p>
                     <div class="container mt-4" style="text-align: center;">
-                      <a href="{% url 'resources' %}"><div class="btn btn-primary">Read More</div></a>
+                      <a href="{% url 'resources' %}"><div class="btn btn-primary">Access Resources</div></a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
