--- a/static/main/css/style.css
+++ b/static/main/css/style.css
@@ -1,4 +1,10 @@
 /*----------------general---------------*/
+h1{
+  color: #00378a;
+}
+.pm-button:hover{
+  color: black;
+}
 /*---------------------navbar---------------------*/
 nav{
     background-color:black;
@@ -132,7 +138,6 @@ svg{
     position: relative;
     border: 5px solid #fff;
   }
-  
   .card-01 .height-fix .card-img-overlay 
   {
     top: inherit;
@@ -167,6 +172,7 @@ svg{
   
   .article-content {
     font-size: 1.3em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
   
   .img-container {
@@ -302,6 +308,7 @@ svg{
         height: 6rem;
     }
 }
+
 @media only screen and (max-width: 768px){
     .icon-class{
         margin-bottom: 5%;
