--- a/main/templates/main/Articles/C++/1002.html
+++ b/main/templates/main/Articles/C++/1002.html
@@ -2,7 +2,76 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Advantages and Disadvantages Of C++ Programming</h3>
+ </div>
+ <div class="article-content" style="text-align: center;"></div>
+ Article by <b><a href="">Smita Jha</a></b>
+ <br>
 </div>
+<br>
+<p class="article-subhead">
+    Advantages of C++
+</p>
+<p class="article-content">
+    <div class="article-content">
+        <ul>
+            <li><b>1. Portability </b>C++ offers the feature of portability or platform independence which allows the user to run the same program on different operating systems or interfaces at ease. Suppose you write a program in LINUX OS and for some apparent reason you switch to Windows OS, you would be able to run the same program in windows as well without any error. This feature proves to be of great convenience to the programmer.</li>
+        </ul>
+        <ul>
+            <li><b>2. Object-oriented </b>One of the biggest advantages of C++ is the feature of object-oriented programming which includes concepts like classes, inheritance, polymorphism, data abstraction, and encapsulation that allow code reusability and make a program even more reliable. Not only this, it helps us deal with real-world problems by treating data as an object. C lacked this feature and hence it was created, proving to be of great significance..</li>
+        </ul>
+        <ul>
+            <li><b>3. Low-level Manipulation </b>Since C++ is closely associated with C, which is a procedural language closely related to the machine language, C++ allows low-level manipulation of data at a certain level. Embedded systems and compiler are created with the help of C++.</li>
+        </ul>
+        <ul>
+            <li><b>4. Memory Management </b>C++ gives the programmer the provision of total control over memory management. This can be considered both as an asset and a liability as this increases the responsibility of the user to manage memory rather than it being managed by the Garbage collector. This concept is implemented with the help of DMA (Dynamic memory allocation) using pointers</li>
+        </ul>
+        <ul>
+            <li><b>5. Large Community Support </b>C++ has a large community that supports it by providing online courses and lectures, both paid and unpaid. Statistically speaking, C++ is the 6th most used and followed tag on StackOverflow and GitHub.</li>
+        </ul>
+        <ul>
+            <li><b>6. Compatibility with C </b>C++ is pretty much compatible with C. Virtually, every error-free C program is a valid C++ program. Depending on the compiler used, every program of C++ can run on a file with .cpp extension.</li>
+        </ul>
+        <ul>
+            <li><b>7. Scalability </b>Scalability refers to the ability of a program to scale. It means that the C++ program is capable of running on a small scale as well as a large scale of data. We can also build applications that are resource-intensive.
+            </li>
+        </ul>
+    </div>
+</p>
+<div class="img-container" style="text-align: center;">
+    <img class="article-img" style="height: 500px;" src="https://d2h0cx97tjks2p.cloudfront.net/blogs/wp-content/uploads/sites/2/2019/07/Advantages-and-Disadvantages-of-C4.jpg" alt="1001">
+    <p classname="article-img-desc">
+        <b>
+            Advantages and Disadvantages of C++ Programming
+        </b>
+    </p>
+    <p class="article-subhead">
+        Disadvantages of C++
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>1. Use of Pointers: </b>Pointers are a relatively difficult concept to grasp and it consumes a lot of memory. Misuse of pointers like wild pointers may cause the system to crash or behave anomalously.</li>
+            </ul>
+            <ul>
+                <li><b>2. Security Issue</b>
+                    Although object-oriented programming offers a lot of security to the data being handled as compared to other programming languages that are not object-oriented, like C, certain security issues still exist due to the availability of friend functions, global variables and, pointers.
+                </li>
+            </ul>
+            <ul>
+                <li><b>3. Absence of Garbage Collector: </b>As discussed earlier, C++ gives the user complete control of managing the computer memory using DMA. C++ lacks the feature of a garbage collector to automatically filter out unnecessary data.
+                </li>
+            </ul>
+            <ul>
+                <li><b>4. Absence of Built-in Thread</b>C++ does not support any built-in threads. Threads is a relatively new concept in C++ which wasn’t initially there. Now, C++ is capable of supporting lambda functions.</li>
+            </ul>
+            <p class="article-subhead">
+                Summary
+            </p>
+            <p class="article-content">
+                In this article, we discussed the various pros and cons of C++. It is safe to say that after developing an understanding of the advantages and disadvantages of C++, you are now ready to make the right choice to learn C++.
+            </p>
+        </div>
 {% endblock %}
