--- a/main/templates/main/Articles/C++/1003.html
+++ b/main/templates/main/Articles/C++/1003.html
@@ -2,7 +2,147 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Roadmap of becoming C++ developer</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="">Smita Jha</a></b>
+        <br>
+    </div>
+    <br>
+    <p class="article-content">
+        C++  has a steep learning curve, but taking the time to learn this language will do wonders for your career and will set you apart from other developers. You’ll have an easier time picking up new languages, you’ll form real problem-solving skills, and build a solid foundation on the fundamentals of programming.
+    </p>
+    <p class="article-content">
+    <p class=article-subhead>
+        How to Become a C++ Developer?
+    </p>
+    <div class="article-content">
+        <ul>
+            <li>To get started with C or C++, what you’ll want in most cases, at the very least, is a compiler.</li>
+        </ul>
+        <ul>
+            <li>There are a lot of good compilers available on Windows, On Windows, Visual Studio provides C++ compiler.</li>
+        </ul>
+        <ul>
+            <li>If you are looking for something more standard compliant, GCC (MinGW) might be what you need. The Codeblocks IDE works exceptionally well in this</li>
+        </ul>
+        <ul>
+            <li>Tutorials are a great way to get started with a new programming language. Even if you are not very familiar with programming itself setup. Our tutorials will teach you the most important concepts.</li>
+        </ul>
+    </div>
+    </p>
+    <p class="article-subhead">What to Learn in C++?</p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>Data Structures</b>
+               You should know how to use all these + all their related functions + the time complexity of all these functions + (probably) how these functions work.
+                    
+                vectors (dynamic arrays) - know why push_back is amortized constant, not just that it is so
+                maps and sets (red-black BSTs usually)
+                unordered_maps and unordered_sets (hash tables)
+                 stacks/queues/deques/lists
+                priority_queues (though I'd argue in an interview you should just use a map since it can do anything a priority_queue can do and more)
+                You should also know what iterators are and how to use them with the above data structures and below algorithms, because you need to when using STL. 
+                </li>
+            </ul>
+            <ul>
+                <li><b>Graphs </b>are also important to know how to implement. For interviews, I usually use a vector of vectors for an adjacency-list (or even adjacency-matrix) representation just because it's fast to implement and usually is sufficient enough for you to write your algorithm, but alternatives are also feasible and some people may prefer building it from scratch using classes/structs/pointers. In many cases you can just forgo building the graph completely during an interview and assume you have it given, and in some cases you shouldn't build the graph at all, but rather have your algorithm dynamically generate the needed parts as it executes.</li>
+            </ul>
+            <ul>
+                <li><b>Algorithms</b>Aside from all the related functions for the data structures above, the algorithm library is extremely important, and you should probably know every function in it as well as how it's implemented and its time/space complexity (because all of these are fair game for interview questions and you might be asked to implement them from scratch, though probably without as much generalization as STL). Here are the most important ones, though, in my opinion:
+                    sort
+                    stable_sort
+                    nth_element
+                    lower_bound
+                    upper_bound
+                    merge/inplace_merge
+                    next_permutation/prev_permutation
+                    rotate
+                    reverse</li>
+            </ul>
+            <ul>
+                <li><b>Pointers, Classes/Structs, and OOP Concepts</b>
+                    You should know these at least enough to make a linked list and trie (which are the most useful data structure that is not implemented in STL) in about 5-7 minutes, complete with an insert (or search) function (and yes you may be asked to do this in an interview). You should be very comfortable with them - I doubt pointers and classes will be explicitly asked about (you might be asked about OOP Concepts though), but you may very well have to use them.
+                </li>
+            </ul>
+            <p class="article-subhead">
+                Who is a Good C++ Developer?
+            </p>
+            <p class="article-content">
+                <div class="article-content">
+                <ul><li>Strong proficiency in C++, with a fair knowledge of the language specification</li></ul>
+                <ul><li>Thorough knowledge of the standard library, STL containers, and algorithm.</li></ul>
+                <ul><li>Good understanding of memory management in non-garbage collected environments</li></ul>
+                <ul><li>Understanding of dynamic polymorphism and C++ specific notions, such as friend classes</li></ul>
+                <ul><li>Familiarity with templating in C++</li></ul>
+                <ul><li>Knowledge of the latest C++11 standard is appreciated, depending on project specifications</li></ul>
+                <ul><li>Familiarity with embedded systems design, low-level hardware interactions</li></ul>
+                <ul><li>Knowledge of low-level threading primitives and real-time environments </li></ul>
+                <ul><li>Familiarity with system call wrapper library functions</li></ul>
+                <ul><li>Knowledge of writing native modules for high-level languages such as Node.js, Python, Go, etc. </li></ul>
+                <ul><li>Knowledge of component data sheets and specifications</li></ul>
+                <ul><li>Implementation of automated testing platforms and unit tests</li></ul>
+                <ul><li>Proficient understanding of code versioning tools</li></ul>
+                <ul><li>Make sure to mention other frameworks, libraries, or any other technology relevant to your project</li></ul>
+                </div>
+            </p>
+            <p class="article-subhead">
+                Job Roles For C++ Developers
+            </p>
+            <p class="article-content">
+            <div class="article-content">
+                Your options are very widespread. C++ is maybe the most universal programming language and used in any topics like
+                <br>
+               <ul><li>Low-level programming (e.g. device drivers)</li></ul>
+               <ul><li>Desktop applications (which is what you seemed to develop upon your description)</li></ul>
+              <ul><li>Rendering engines (like Google's V8)</li></ul>
+                <ul><li> Game engines (CryEngine, Unreal Engine, etc.)</li></ul>
+              <ul><li>Network programming (e.g. firmware for routers and switches)</li></ul>
+               <ul><li>Acceleration of computationally intensive code parts (e.g. plugins for scripting languages)</li></ul>
+             <ul><li>Virtual Reality applications</li></ul>
+              <ul><li>And many more….</li></ul>
+             </div>
+             <br>
+             Your career options depend on your personal interests and your passion. It is generally a problem, giving good career advice. That's something that depends on so many subjective parts that can't be evaluated objectively.
+            </p>
+            <p class="article-subhead">
+                What is the Pay by Experience Level for C++ Developers?
+            </p>
+            <p class="article-content">
+                <div class="article-content">
+                    An entry-level C++ Developer with less than 1-year experience can expect to earn an average total compensation (includes tips, bonus, and overtime pay) of ₹295,898 based on 22 salaries. An early career C++ Developer with 1-4 years of experience earns an average total compensation of ₹437,735 based on 69 salaries. A mid-career C++ Developer with 5-9 years of experience earns an average total compensation of ₹980,840 based on 25 salaries. An experienced C++ Developer with 10-19 years of experience earns an average total compensation of ₹1,448,276 based on 9 salaries.
+                </div>
+            </p>
+            <div class="img-container" style="text-align: center;">
+                <img class="article-img" style="height: 500px;" src="https://devskiller.com/wp-content/uploads/2020/03/cpayscale-experience.png" alt="1001">
+                <p classname="article-img-desc">
+                    <b>
+                        Pay by experience level of C++ developer.
+                    </b>
+                </p>
+            </div>
+            <p class="article-subhead">
+                Future of C++
+            </p>
+            <p class="article-content">
+                C++’s biggest advantages are big efficiency and speed. It can also easily optimize huge amounts of data. That’s why it is most often applied in big, robust applications such as servers, where data processing is crucial. What is more, its efficiency reduces energy usage, which makes it a great language for mobile devices.
+In fact, some of the software giants of all time are based on C++. It is the main technology in the case of Microsoft, Oracle, Mozilla, Opera, PayPal, Evernote, and Linkedin. And it is partly used in the code of Amazon, Facebook, SAP, and Adobe.
+The above list is very impressive, yet it is only the beginning. Google still applies C++ in some fields of its search engine. Most importantly, Google Chrome was primarily written in this language. Being extremely popular among users all over the world, Google required high performance and big stability, which are the main characteristics of C++.
+Finally, C++ is present in most of the operating systems, such as Windows or iOS; and some of the high budget AAA games, such as Grand Theft Auto or Metal Gear Solid.
+            </p>
+            <p class="article-subhead">
+                Summing Up
+            </p>
+            <p class="article-content">
+                Based on the above we can surely say C++ is far from its end. Although it is not among the most trendy technologies anymore, it is still irreplaceable in most of the applications named above. In fact, the TIOBE index for May 2017 places C++ in the 3rd place.
+            </p>
+        </div>
+
+
+
+
     
-</div>
 {% endblock %}
