--- a/main/templates/main/Articles/C++/1001.html
+++ b/main/templates/main/Articles/C++/1001.html
@@ -2,7 +2,50 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
-</div>
+<div class="container  mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Introduction to C++ Programming</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="">Smita Jha</a></b>
+        <br>
+    </div>
+    <br>
+    <p class="article-content">
+        C++ is a general-purpose programming language created by Bjarne Stroustrup as an extension of the C programming language, or "C with Classes". It is a simple and platform-independent programming language.
+    </p>
+    <div class="img-container" style="text-align:center">
+    <img src="https://www.sitesbay.com/cpp/images/feature-of-cpp.png" alt="1001" class="article-img" style="height: 70%;">
+    <p classname="article-img-desc">
+        <b>
+            Features of C++
+        </b>
+        </p>
+        </div>
+        <p class="article-content">
+            <h3>What can you do with C++?</h3>
+        </p>
+        <p class="article-content">
+            You may be wondering what all are the applications of C++. There are so many applications of Python, here are some of the them.
+        </p>
+        <p class="article-content">
+            <div class="article-content">
+                <ul>
+                <li><b>Web Browser: </b> This language is used for developing browsers as well. C++ is used for making Google Chrome, and Mozilla Internet browser Firefox. Some of the applications are written in C++, from which Chrome browser is one of them and others are like a file system, the map reduces large cluster data processing. Mozilla has other application also written in C++ that is email client Mozilla Thunderbird. C++ is also a rendering engine for the open-source projects of Google and Mozilla.
+                </li>
+                </ul>
+                <ul>
+                    <li>
+                        <b>Compilers: </b>Most of the compilers mainly written in C++ language only. The compilers that are used for compiling other languages like C#, Java, etc. mainly written in C++ only. It is also used in developing these languages as well as C++ is platform-independent and able to create a variety of software.
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <b>Operating Systems: </b>It is also used for developing most of the operating systems for Microsoft and a few parts of the Apple operating system. Microsoft Windows 95, 98, 2000, XP, office, Internet Explorer and visual studio, Symbian mobile operating systems are mainly written in C++ language only.
+                    </li>
+                </ul>
+            </div>
+        </p>
+     
+</div> 
 {% endblock %}
