--- a/main/templates/main/Articles/C++/1002.html
+++ b/main/templates/main/Articles/C++/1002.html
@@ -6,10 +6,10 @@
     <div class="article-subhead" style="text-align: center">
         <h3>Advantages and Disadvantages Of C++ Programming</h3>
  </div>
- <div class="article-content" style="text-align: center;"></div>
- Article by <b><a href="">Smita Jha</a></b>
+ <div class="article-content" style="text-align: center;">
+ Article by <b><a href="">Smita Jha</a></b></div>
  <br>
-</div>
+
 <br>
 <p class="article-subhead">
     Advantages of C++
@@ -42,6 +42,7 @@
 </p>
 <div class="img-container" style="text-align: center;">
     <img class="article-img" style="height: 500px;" src="https://d2h0cx97tjks2p.cloudfront.net/blogs/wp-content/uploads/sites/2/2019/07/Advantages-and-Disadvantages-of-C4.jpg" alt="1001">
+</div>
     <p classname="article-img-desc">
         <b>
             Advantages and Disadvantages of C++ Programming
@@ -67,11 +68,12 @@
             <ul>
                 <li><b>4. Absence of Built-in Thread</b>C++ does not support any built-in threads. Threads is a relatively new concept in C++ which wasn’t initially there. Now, C++ is capable of supporting lambda functions.</li>
             </ul>
-            <p class="article-subhead">
-                Summary
-            </p>
-            <p class="article-content">
-                In this article, we discussed the various pros and cons of C++. It is safe to say that after developing an understanding of the advantages and disadvantages of C++, you are now ready to make the right choice to learn C++.
-            </p>
         </div>
+        <p class="article-subhead">
+            Summary
+        </p>
+        <p class="article-content">
+            In this article, we discussed the various pros and cons of C++. It is safe to say that after developing an understanding of the advantages and disadvantages of C++, you are now ready to make the right choice to learn C++.
+        </p>
+    </div>
 {% endblock %}
