--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -94,7 +94,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">C++: Introduction</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">C++ is a general-purpose programming language created by Bjarne Stroustrup as an extension of the C programming language, or "C with Classes". It is a simple and platform-independent programming language.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'c++1' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -110,7 +110,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">More About C++</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">It is safe to say that after developing an understanding of the advantages and disadvantages of C++, you are now ready to make the right choice to learn C++.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'c++2' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -126,7 +126,7 @@
                   <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Roadmap to Become C++ Developer</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">C++  has a steep learning curve, but taking the time to learn this language will do wonders for your career and will set you apart from other developers. You’ll have an easier time picking up new languages, you’ll form real problem-solving skills, and build a solid foundation on the fundamentals of programming.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'c++3' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
