--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -14,6 +14,7 @@
             margin: 1.0%;
         }
     </style>
+    <script>(function(w, d) { w.CollectId = "5f7a12a20f65cb31086fdf11"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
