--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -398,37 +398,37 @@
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <h3>Python Introduction</h3>
+                    <h3>Python Tutorials</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                         <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
+                    <p>We have brought you Tutorials on the most popular programming language of the world which is widely used i.e. <b>PYTHON</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
                     <div class="container mt-4" style="text-align: center;">
-                        <div class="btn btn-primary">Read More</div>
-                    </div>
+                      <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a> 
+                  </div>
                 </div>
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <h3>C++ Introduction</h3>
+                    <h3>C++ Tutorials</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                         <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
+                    <p>We have brought you Tutorials on one of the top most language which is used in almost every company i.e. <b>C++</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
                     <div class="container mt-4" style="text-align: center;">
-                        <div class="btn btn-primary">Read More</div>
-                    </div>
+                      <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a> 
+                  </div>
                 </div>
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <h3>Python Full Notes</h3>
+                    <h3>Notes and resources</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                         <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
+                    <p>Have you ever encountered tutorials, Notes and Resources at the same place? We have made all the facilities available for you entirely free of cost. You can enjoy the Tutorials as well as the resources collected from all over the Internet at one place. Have a good time accessing the resources and Learning from us.</p>
                     <div class="container mt-4" style="text-align: center;">
-                        <div class="btn btn-primary">Read More</div>
+                      <a href="{% url 'resources' %}"><div class="btn btn-primary">Access Resources</div></a>
                     </div>
                 </div>
             </div>
