Trial Quiz Integrated

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,7 +11,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://www.codingelements.com/images/logos/open-graph-coding-elements-logo.png" class="d-block w-100" alt="...">
+        <img src="https://www.cleverbox.co.uk/wp-content/uploads/2018/02/i2i-Website.gif.pagespeed.ce.o87stZj0pN.gif" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="https://www.codingelements.com/images/logos/open-graph-coding-elements-logo.png" class="d-block w-100" alt="...">
