--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -15,6 +15,13 @@
         }
     </style>
     <script>(function(w, d) { w.CollectId = "5f7a12a20f65cb31086fdf11"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
+    <script type="text/javascript">
+        (function(i,n,t,e,r,a,c){i['InteractPromotionObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=n.createElement(t),
+        c=n.getElementsByTagName(t)[0];a.async=1;a.src=e;c.parentNode.insertBefore(a,c)
+        })(window,document,'script','https://i.tryinteract.com/promotions/init.js','i_promo');
+        i_promo('init', 'pW9DUE4rF');
+      </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
